--- a/Полезное.html
+++ b/Полезное.html
@@ -72,7 +72,7 @@
             <h5>
               <a class="nb" href="https://gdz.ru/class-6/matematika/reshebnik-erin-v-k/">Ответы на контрольные и проверочные по математике</a>
             </h5>
-          
+           <h5><a class="nb" href="https://disk.yandex.ru/d/97uCrj3GH-OEoA" />Ответы на на тест по обществознанию </a></h5>
  <h5><a class="nb" href="https://drive.google.com/file/d/1USbV22DrJuoOvBm0uBaFe62DbYQ43jf2/view?usp=sharing" />Ответы на контрольные и проверочные по биологии</a></h5>
 				<h5><a class="nb" href="https://drive.google.com/file/d/1S6L0ShQMEti40Zr-2Yc819VzYANkMAGa/view?usp=drivesdk" />Ответы на контрольные и проверочные по английскому языку</a></h5>
 					<h5><a class="nb" href="https://drive.google.com/file/d/1LBFLILZ2cBkCT1YAVONO0NI8yCKUSPnL/view?usp=drivesdk">Тестовые задачи по математике </a></h6>
