--- a/11 февраля.html
+++ b/11 февраля.html
@@ -72,7 +72,7 @@
 
 
   <h4>Математика</h4>
-  <h5>988,990,992,993, конспект 36п.</h5><br>
+  <h5>988,990,992,993, конспект 36п.(на понедельник) </h5><br>
     <h4>Литература</h4>
   <h5>Прочитать рассказ А. Платонова "Корова" (нет в учебнике). Выучить отрывок из стихотворения "Ты помнишь, Алеша, дороги Смоленщины" (5 строф), стр. 61 до стр. 62 "С простыми крестами их русских могил".</h5><br>
   <h4>Русский</h4>
