--- a/14 февраля.html
+++ b/14 февраля.html
@@ -74,6 +74,8 @@
 
   <h4>Математика</h4>
   <h5>988,990,992,993, конспект 36п.</h5><br>
+  	  <h4>Английский 1гр.</h4>
+  <h5>ex. 2 p. 39 (w.b) </h5><br>
   	  <h4>География</h4>
   <h5>параграф 49, прочитать,знать содержание, выписать термины. ОБязательно посмотреть урок <a href="https://www.youtube.com/watch?v=dEpTiEJFKF0" >ссылка</a>. Записать и выучить все про атмосферное давление.</h5><br>
   <h4>Литература</h4>
