--- a/play.html
+++ b/play.html
@@ -42,6 +42,13 @@
         	<br>
 </div>
 </a>
+<br>       	<a href="гонки.html">
+       <div class="border" style="background-color:#484079;" >
+        <p><img src="logo3.png" height="65px" width="72px" class=" leftimg " > <h3 class="nb ">Гонки для двоих онлайн играть</h3></p>
+        <br>
+        	<br>
+</div>
+</a>
 <br>
         	<a href="nol.html">
       <div class="border" style="background-color:#484079;" >
