--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -65,7 +65,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1" >
           <center><h3 class="nb" style="font-size: 22px" >Ближайшие Контрольные </h3>
             <div data-aos="fade-down" class="border">
-<h4>Физика<br>31 Января</h4>
+<h4>Физика<br>14 февраля </h4>
 <p class="nb">Вопросы: 1.Элементарный электрический заряд<br>
 2.положительные элементарные заряды<br>
 3.отрицательные элементарные заряды<br>
