--- a/15 февраля.html
+++ b/15 февраля.html
@@ -74,8 +74,8 @@
 
   <h4>Математика</h4>
   <h5>1003,1005</h5><br>
-  	  <h4>Английский 1гр.</h4>
-  <h5></h5><br>
+  	  <h4>Английский</h4>
+  <h5>W.b ex 3,5 p. 49</h5><br>
   
   <h4>История</h4>
   <h5></h5><br>
