--- a/15 февраля.html
+++ b/15 февраля.html
@@ -74,12 +74,11 @@
 
   <h4>Математика</h4>
   <h5>1003,1005, зачет, пословицы, задачи по модулю </h5><br>
-  	  <h4>Английский</h4>
+  <h4>Английский</h4>
   <h5>W.b ex 3,5 p. 49</h5><br>
-  
-  <h4>История</h4>
-  <h5>Параграф "Правление Князя Владимира. Крещение Руси". Изучаем документ Из "Повести Временных лет". Ответить письменно на вопросы по документу 1,2,3</h5><br>
-    <h4>Русский</h4>
+   <h4>История</h4>
+  <h5>к.к с.5 номер. 1-5</h5><br>
+   <h4>Русский</h4>
   <h5>450</h5><br>
  </div>
         </div>
