--- a/16 февраля.html
+++ b/16 февраля.html
@@ -73,7 +73,7 @@
 
 
   <h4>Геометрия</h4>
-  <h5>п. 36 1007, 1010, 1012, 1014, 1013(5), рно 906, 929, 930</h5><br>
+  <h5>ничего</h5><br>
    <h4>Русский</h4>
   <h5>Ничего</h5><br>
      <h4>Изо</h4>
