--- a/21 января.html
+++ b/21 января.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="ru-RU">
   <head>
-  	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9491079025870017"
+
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9491079025870017"
      crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
@@ -21,7 +22,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Dz6anew",
+		"name": "Dz6a",
 		"logo": "images/favicon.ico?rand=4951"
 }</script>
 
@@ -69,15 +70,22 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> 
             <div  data-aos="zoom-out-left">
-<h4>Обществознание</h4>
-  <h5>п. 6, "в классе и дома" (учебник)</h5><br>
-  <h4>Литература</h4>
-  <h5> СТР. 20. Творческое задание. Выполнить письменно в тетради.</h5><br>
-<h4>Русский</h4>
-  <h5>упр 395 (1,3)</h5><br>
-  
 
-  
+
+
+  <h4>Математика</h4>
+  <h5>с-22 самостоятельная работа 2в.</h5><br>
+  <img src="мт.jpg" >
+  	  <img src="мт1.jpg" >
+ <h4>Литература</h4>
+  <h5>Прочитать рассказ «Конь с розовой гривой». СТР.89, вопрос 3. По таблице в тетради подготовить устный рассказ о семье Левонтия и бабушки.</h5><br>
+     <h4>Английский</h4>
+  <h5></h5><br>
+  <h4>География</h4>
+  <h5></h5><br>
+    <h4>Физика</h4>
+  <h5>повтлрить тему эл. заряд, закон сохранения энергии. Учить строение атома</h5><br>
+
  </div>
         </div>
       </div>
@@ -98,3 +106,4 @@
     </script>
   </body>
 </html>
+ 
