--- a/dz.html
+++ b/dz.html
@@ -84,9 +84,10 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
+            	                 <h5> <a href="21 февраля.html" class="nb">Дз на 21 февраля Литература Математика Английский География Физика</a></h5>
             	      <h5> <a href="19 февраля.html" class="nb">Дз на 19 февраля Музыка Русский Биология</a></h5>
             	  	            	     <h5> <a href="18 февраля.html" class="nb">Дз на 18 февраля Информ. История Русский Литература</a></h5>
-                 <h5> <a href="17 февраля.html" class="nb">Дз на 17 февраля Литература Математика Английский</a></h5>
+
           
 		
 		      
