--- a/21 февраля.html
+++ b/21 февраля.html
@@ -75,8 +75,8 @@
 
   <h4>Математика</h4>
   <h5>с-22 самостоятельная работа 2в.</h5><br>
-  <img src="мт.jpg" width:="30%" height="50%">
-  	  <img src="мт1.jpg" width:="30%" height="50%">
+  <img src="мт.jpg" width="30%" height="50%">
+  	  <img src="мт1.jpg" width="30%" height="50%">
  <h4>Литература</h4>
   <h5>Прочитать рассказ «Конь с розовой гривой». СТР.89, вопрос 3. По таблице в тетради подготовить устный рассказ о семье Левонтия и бабушки.</h5><br>
      <h4>Английский</h4>
