--- a/21 февраля.html
+++ b/21 февраля.html
@@ -82,7 +82,7 @@
      <h4>Английский</h4>
   <h5>W.b p. 40 ex. 8</h5><br>
   <h4>География</h4>
-  <h5></h5><br>
+  <h5>параграф 50, прочитать, выписать и выучить термины (стр.215) Зарисовать и подписать типы облаков, рис. 144</h5><br>
     <h4>Физика</h4>
   <h5>повтлрить тему эл. заряд, закон сохранения энергии. Учить строение атома</h5><br>
 
