--- a/22 февраля.html
+++ b/22 февраля.html
@@ -76,7 +76,7 @@
   <h4>Математика</h4>
   <h5>1034,1036. 1 вариант c-22 для тех у кого были ошибки</h5><br>
  <h4>Русский</h4>
-  <h5></h5><br>
+  <h5>ничего</h5><br>
      <h4>Английский</h4>
   <h5>Подготовка к контрольной</h5><br>
   <h4>История</h4>
