--- a/dz.html
+++ b/dz.html
@@ -84,9 +84,10 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            		     <h5> <a href="22 февраля.html" class="nb">Дз на 22 февраля Английский Математика История Русский Литература</a></h5>
+            		                 	      <h5> <a href="23 февраля.html" class="nb">Дз на 23 февраля Геометрия Русский Изо</a></h5>
+<h5> <a href="22 февраля.html" class="nb">Дз на 22 февраля Английский Математика История Русский Литература</a></h5>
             	                 <h5> <a href="21 февраля.html" class="nb">Дз на 21 февраля Литература Математика Английский География Физика</a></h5>
-            	      <h5> <a href="19 февраля.html" class="nb">Дз на 19 февраля Музыка Русский Биология</a></h5>
+
             	  	            
 
           
