--- a/23 февраля.html
+++ b/23 февраля.html
@@ -74,9 +74,9 @@
 
 
   <h4>Русский</h4>
-  <h5></h5><br>
+  <h5>записать примеры прописью</h5><br>
  <h4>Геометрия</h4>
-  <h5></h5><br>
+  <h5>? </h5><br>
      <h4>Изо</h4>
   <h5>принести работу(скорей всего закончить из за отсутствия уроков)</h5><br>
 
