--- a/Главная.html
+++ b/Главная.html
@@ -80,6 +80,9 @@
               <h5>
                 <a href="https://t.me/Dz6a_tftl_bot" class="nb">Перейти в telegram бота Dz6a</a>
               </h5>
+                                    <h5>
+                <a href="https://t.me/baltyn0_bot" class="nb">Перейти в НОВОГО telegram бота балтуна</a>
+              </h5>
             </div>
           </div>
             <div class="u-clearfix u-custom-html u-custom-html-5">
