--- a/Главная.html
+++ b/Главная.html
@@ -77,11 +77,16 @@
               <h5>
                 <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a>
               </h5>
+              
               <h5>
                 <a href="https://t.me/Dz6a_tftl_bot" class="nb">Перейти в telegram бота Dz6a</a>
               </h5>
                                     <h5>
                 <a href="https://t.me/baltyn0_bot" class="nb">Перейти в НОВОГО telegram бота балтуна</a>
+              </h5>
+              
+                        <h5>
+                <a href="paint/index.html" class="nb">Открыть web pain (рисовалку) </a>
               </h5>
             </div>
           </div>
