--- a/Главная.html
+++ b/Главная.html
@@ -86,7 +86,7 @@
               </h5>
               
                         <h5>
-                <a href="paint/index.html" class="nb">Открыть web pain (рисовалку) </a>
+                <a href="paint/index.html" class="nb">Открыть web paint (рисовалку) </a>
               </h5>
             </div>
           </div>
