--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               </h5>
               
                       <h5>
-                <a href="paint/index.html" class="nb">Открыть web pain (рисовалку) </a>
+                <a href="paint/index.html" class="nb">Открыть web paint (рисовалку) </a>
               </h5>
             </div>
             <div class="u-clearfix u-custom-html u-custom-html-2">
