--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            		                          	                 <h5> <a href="24 февраля.html" class="nb">Дз на 24 февраля Литература Математика Литература</a></h5>
+            		                          	                 <h5> <a href="24 февраля.html" class="nb">Дз на 24 февраля Математика Литература</a></h5>
    	      <h5> <a href="23 февраля.html" class="nb">Дз на 23 февраля Геометрия Русский Изо</a></h5>
 <h5> <a href="22 февраля.html" class="nb">Дз на 22 февраля Английский Математика История Русский Литература</a></h5>
 
