--- a/paint/index.html
+++ b/paint/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Dz6a рисовалка</title>
         <link rel="stylesheet" href="paint.css">
-    
+        <link rel="icon" href="https://dz6a.netlify.app/images/favicon.ico">
 </head>
 
     <body>
