--- a/25 февраля.html
+++ b/25 февраля.html
@@ -77,7 +77,7 @@
   <h5>Готовиться к контрольной по второй главе</h5><br>
     <h4>Литература</h4>
   <h5>найти деалектные слова в рассказе и выписать</h5><br>
-    <h4>Истортя</h4>
+    <h4>История</h4>
   <h5>параграф: "Культурное пространство и культура Древней Руси" Пересказ 6 и 7 подпункта параграфа. Выписать термины в тетрадь.</h5><br>
  <h4>Русский</h4>
   <h5>Примеры. Подробней в дз на 23 февраля</h5><br>
