--- a/paint/index.html
+++ b/paint/index.html
@@ -23,12 +23,10 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/85851797" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-    	<style>body {
-background-color: #583F79;
-} </style>
+
         <script type="text/template" id="main">
           
-<h3 style="color: white; margin-right: 30px;" align="right" >Не забудьте сделать скриншот</h3>
+<h3 style="color: Black; margin-right: 30px;" align="right" >Не забудьте сделать скриншот</h3>
  <div id="ui">
                 <div id="clear-button" class="button">Очистить</div>
 
