--- a/paint/index.html
+++ b/paint/index.html
@@ -99,8 +99,10 @@
             
         </script>
                 <div id="qualities"></div> 
+                <h1>НА СТАРЫХ УСТРОЙСТВАХ НЕ ПОДДЕРЖИВАЕТСЯ</h1>
                   <div class="buttons" id="models"></div>
               <div id="save-button" class="button">. </div>
   <div id="undo-button" class="button">.</div><div id="redo-button" class="button">. </div>
-  </body>
+  
+</body>
 </html>
