--- a/25 февраля.html
+++ b/25 февраля.html
@@ -80,7 +80,7 @@
     <h4>История</h4>
   <h5>параграф: "Культурное пространство и культура Древней Руси" Пересказ 6 и 7 подпункта параграфа. Выписать термины в тетрадь.</h5><br>
  <h4>Русский</h4>
-  <h5>Примеры. Подробней в дз на 23 февраля</h5><br>
+  <h5>Записать примеры прописью которые записывали на уроке</h5><br>
 
 
 
