--- a/26 февраля.html
+++ b/26 февраля.html
@@ -76,7 +76,7 @@
   <h4>Русский</h4>
   <h5>Найти 2 факта о русском языке. Тренировать склонения числительных</h5><br>
     <h4>Музыка</h4>
-  <h5>? </h5><br>
+  <h5>найти информацию о композиторах XX веков</h5><br>
  <h4>Биология</h4>
   <h5>учебник стр. 184-187 читать,? устно выписать и выучить термины с определениями. посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/tsvetok">ссылка</a></h5><br>
 
