--- a/dz.html
+++ b/dz.html
@@ -84,9 +84,10 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            	   	      <h5> <a href="26 февраля.html" class="nb">Дз на 26 февраля Русский Музыка Биология</a></h5>
+            	   	             		                          	                 <h5> <a href="28 февраля.html" class="nb">Дз на 28 февраля Математика Литература Английский География Физика</a></h5>
+     <h5> <a href="26 февраля.html" class="nb">Дз на 26 февраля Русский Музыка Биология</a></h5>
             	<h5> <a href="25 февраля.html" class="nb">Дз на 25 февраля Обществознание История Русский Литература</a></h5>
-            		                          	                 <h5> <a href="24 февраля.html" class="nb">Дз на 24 февраля Математика Литература</a></h5>
+
 
 
 
