--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            	     <h5> <a href="2 марта.html" class="nb">Дз на 26 февраля Русский Музыка Биология</a></h5>
+            	     <h5> <a href="2 марта.html" class="nb">Дз на 2 марта Русский Геометрия Изо</a></h5>
             	   	                       	<h5> <a href="1 марта.html" class="nb">Дз на 1 марта Математика История Русский Английский</a></h5>  	
 	                          	                 <h5> <a href="28 февраля.html" class="nb">Дз на 28 февраля Математика Литература Английский География Физика</a></h5>
 
