--- a/dz.html
+++ b/dz.html
@@ -101,10 +101,9 @@
 		      
             			   
         </div>
-            	   <br>
-<br><br>	             	   <br>
+                         	   <br>
 <br><br>	        
-<a href="гдз.html" >          
+<a href="gdz.html" >          
 	
 
       </div>
