--- a/dz.html
+++ b/dz.html
@@ -84,9 +84,10 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
+            	  <h5> <a href="5 марта.html" class="nb">Дз на 5 марта Русский Биология Музыка </a></h5>
             	 	<h5> <a href="4 марта.html" class="nb">Дз на 4 марта Литература История Русский Английский</a></h5>  	
             	                             	                 <h5> <a href="3 марта.html" class="nb">Дз на 3 марта Математика Литература Английский </a></h5>
-  <h5> <a href="2 марта.html" class="nb">Дз на 2 марта Русский Геометрия Изо</a></h5>
+
         
 
 
