--- a/7 марта.html
+++ b/7 марта.html
@@ -74,7 +74,7 @@
 
 
   <h4>Математика</h4>
-  <h5></h5><br>
+  <h5>1085(доделать), 1086</h5><br>
   <h4>Английский 1гр.</h4>
   <h5>W.b p. 43 ex.1,2</h5><br>
     <h4>География</h4>
