--- a/dz.html
+++ b/dz.html
@@ -84,9 +84,10 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-                 <h5> <a href="11 марта.html" class="nb">Дз на 11 марта Литература Русский Обществознание </a></h5>
+                            	 	<h5> <a href="12 марта.html" class="nb">Дз на 12 марта Биология Русский Музыка </a></h5>  	
+ <h5> <a href="11 марта.html" class="nb">Дз на 11 марта Литература Русский Обществознание </a></h5>
 	               	  <h5> <a href="10 марта.html" class="nb">Дз на 10 марта Английский Литература Математика </a></h5> 
-            	 	<h5> <a href="9 марта.html" class="nb">Дз на 9 марта Геометрия Русский Изо</a></h5>  	
+
 
 
 
