--- a/14 марта.html
+++ b/14 марта.html
@@ -76,7 +76,7 @@
   <h4>Математика</h4>
   <h5>1101,1103. Сложние чисел с разными знаками </h5><br>
     <h4>География</h4>
-  <h5></h5><br>
+  <h5>Повторить тему Атмосфера. Знать записи в тетради </h5><br>
   	    <h4>Английский 1гр.</h4>
   <h5>W.b p. 45 ex. 1,2,3,4</h5><br>
     <h4>Литература</h4>
