--- a/gdz.html
+++ b/gdz.html
@@ -1,3 +1,3 @@
-<h1>Английский 14 марта</h1>
-<img src="еn1.jpg" width="100%" >
-	<img src="еn2.jpg" width="100%" >
+<h1>история 15 марта</h1>
+<img src="is1.jpg" width="100%" >
+	
