--- a/17 марта.html
+++ b/17 марта.html
@@ -73,7 +73,7 @@
 
 
 
-  <h4>Математика</h4>
+  <h4>Мате</h4>
   <h5>1111, 1113</h5><br>
   	    <h4>Английский 1гр.</h4>
   <h5>Превод номер 9 весь в wb</h5><br>
