--- a/18 марта.html
+++ b/18 марта.html
@@ -80,7 +80,7 @@
   <h4>Русский</h4>
   <h5>608</h5><br>
     <h4>История</h4>
-  <h5></h5><br>
+  <h5>ответить на вопросы после параграфа устно </h5><br>
  </div>
         </div>
       </div>
