--- a/download.html
+++ b/download.html
@@ -517,19 +517,19 @@
         <!--<img style="height: 100%; width: 100%;" src="http://appsgeyser.com/img/getWidgetDesktop.png">-->
     </div>
     <div class="appIcon">
-        <img id="icon-default" alt="App Icon" style="height: 150px; width: 150px; display: block;" src="https://appsgeyser.com/geticon.php?widget=Dz6a тфтл_14818100&width=512" >
+        <img id="icon-default" alt="App Icon" style="height: 150px; width: 150px; display: block;" src="https://dz6a.netlify.app/images/favicon.ico" >
     </div>
     <div class="aboutApp">
         <table width="100%" cellpadding="5" cellspacing="0">
             <tr>
                 <td id="installId"><div style="padding-top: 15px" class="appStat appInstall">
-                        Установок: 14           </div>
+                        Установок: 2           </div>
                 </td>
                 <td id="nameId"><div class="appName">
                         Dz6a тфтл                    </div>
                 </td>
                        <td id="installId"><div class="appStat appInstall">
-                        Версия: 3.1                  </div>
+                        Версия: 4.0              </div>
                 </td>
 
             </tr>
@@ -537,6 +537,6 @@
             </div>
 
     <div class="aboutAppText">
-         <a href="https://dz6a.netlify.app/Dz6a.apk">  <div class="mainText">Загрузить</div>
+         <a href="https://dz6a.netlify.app/Dz6a_4.0.apk">  <div class="mainText">Загрузить</div>
 
        
