--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            	       	  <h5> <a href="2 апреля.html" class="nb">Дз на 30  марта Геометрия Математика </a></h5>  
+            	       	  <h5> <a href="2 апреля.html" class="nb">Дз на 2 марта Биология русский </a></h5>  
             	            	            	 	<h5> <a href="1 апреля.html" class="nb">Дз на 1 апреля Литература Русский</a></h5>  	
             		<h5> <a href="31 марта.html" class="nb">Дз на 31 марта Литература Математика </a></h5>  	
             	            	
