--- a/2 апреля.html
+++ b/2 апреля.html
@@ -76,7 +76,7 @@
   <h4>Биология</h4>
   <h5>Учебник стр.196-199 читать, ?4,7письменно(стр.199), РТ №№1-3(стр 79-81) . Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/razmnozhenie-pokrytosemennyh">ссылка</a></h5><br>
   	    <h4>Русский</h4>
-  <h5>готовиться к контрольной </h5><br>
+  <h5>упр 629,630 карандашом, приготовиться к диктанту+ разбор </h5><br>
  </div>
         </div>
       </div>
