--- a/9 апреля.html
+++ b/9 апреля.html
@@ -77,7 +77,7 @@
   <h4>Биология</h4>
   <h5>Учебник стр.200-201 читать, ? устно, закончить сравнение классов в таблице. Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/osnovy-sistematiki-rasteniy" >ССЫЛКА </a> и  <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/klassy-tsvetkovyh-rasteniy" >ССЫЛКА </a></h5><br>
     <h4>Русский</h4>
-  <h5>? </h5><br>
+  <h5>643, 107-108 читать</h5><br>
 
  </div>
         </div>
