--- a/13 апреля.html
+++ b/13 апреля.html
@@ -74,7 +74,7 @@
 
 
   <h4>Русский</h4>
-  <h5></h5><br>
+  <h5>659, 663(карандашом), с.113,114 правила</h5><br>
     <h4>Геометрия</h4>
   <h5></h5><br>
 
