--- a/16 апреля.html
+++ b/16 апреля.html
@@ -75,7 +75,7 @@
 
   <h4>Русский</h4>
   <h5>684</h5><br>
-    <h4>Обществознание</h4>
+    <h4>Биология</h4>
   <h5>Учебник стр202-204 читать, записать характеристику семейства Крестоцветные и  Розоцветные. Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/semeystvo-krestotsvetnye">ССЫЛКА</a> и <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/semeystvo-rozotsvetnye" >ССЫЛКА</a></h5><br>
 
  </div>
