--- a/18 апреля.html
+++ b/18 апреля.html
@@ -76,11 +76,10 @@
   <h4>Литература</h4>
   <h5>готовиться к проверочной по мифам. 208-232чит</h5><br>
     <h4>Математика</h4>
-  <h5></h5><br>
+  <img src="mat.jpg" width="50%" ><br>
+  	  <img src="mat1.jpg" width="50%" >
   <h4>География</h4>
   <h5>54-56 знать термины. Рт с. 74-77 решать. П. 23-25</h5><br>
-    <h4>Английский</h4>
-  <h5></h5><br>
 
  </div>
         </div>
