--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            	        		<h5> <a href="18 апреля.html" class="nb">Дз на 18 апреля Английский Математика Литература География </a></h5>  	
+            	        		<h5> <a href="18 апреля.html" class="nb">Дз на 18 апреля Математика Литература География </a></h5>  	
             	            	         	       	  <h5> <a href="16 апреля.html" class="nb">Дз на 16 апреля Русский Биология</a></h5>   
             	            	            	  	 	<h5> <a href="15 апреля.html" class="nb">Дз на 15 апреля Русский Обществознание История</a></h5>  	
             	   
