--- a/23 апреля.html
+++ b/23 апреля.html
@@ -74,7 +74,7 @@
 
 
     <h4>Биология</h4>
-  <h5>Учебник стр.204-209 читать, ? устно, РТ №3,4,5(стр. 89-90) Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/klass-dvudolnye-semeystvo-bobovye" >СЫЛКА</a> и <href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/paslenovye" >ССЫЛКА</a>и <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/dvudolnye-semeystvo-astrovye" >ССЫЛКА</a></h5><br>
+  <h5>Учебник стр.204-209 читать, ? устно, РТ №3,4,5(стр. 89-90) Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/klass-dvudolnye-semeystvo-bobovye" >ССЫЛКА</a> и <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/paslenovye" >ССЫЛКА</a> и <a href="https://interneturok.ru/lesson/biology/6-klass/osnovy-sistematiki-rasteniy/dvudolnye-semeystvo-astrovye" >ССЫЛКА</a></h5><br>
 
  </div>
         </div>
