--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            				<h5> <a href="28 апреля.html" class="nb">Дз на 6 мая Литература История</a></h5>  	 
+            				<h5> <a href="6 мая.html" class="nb">Дз на 6 мая Литература История</a></h5>  	 
             			    	  <h5> <a href="30 апреля.html" class="nb">Дз на 30 апреля Русский Биология</a></h5>    
             	            	 	 	<h5> <a href="29 апреля.html" class="nb">Дз на 29 апреля История Литература Обществознание Русский</a></h5>  	 
             
