--- a/6 мая.html
+++ b/6 мая.html
@@ -75,7 +75,10 @@
 
   <h4>Литература</h4>
   <h5>стр. 257. Литература и другие виды искусства. 1 (у), 2 (нарисовать Маленького принца или описать внешность).</h5><br>
-    <h4>История</h4>
+   <h4>Обществознание</h4>
+  <h5>Распечатки 5,6 задание</h5><br>
+ 
+   <h4>История</h4>
   <h5>Подготовка к проверочной работе "Русские земли в середине XIII-XIV вв.»</h5><br>
 
  </div>
