--- a/Полезное.html
+++ b/Полезное.html
@@ -23,7 +23,28 @@
 
 
 </head>
-  <body class="u-body u-overlap"><header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
+  <body class="u-body u-overlap fog" id="fog">
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.waves.min.js"></script>
+<script>
+  VANTA.WAVES({
+    el: "#fog",
+    mouseControls: true,
+    touchControls: true,
+    gyroControls: false,
+    minHeight: 200.00,
+    minWidth: 200.00,
+    scale: 1.00,
+    scaleMobile: 1.00,
+    color: 0x583f79,
+    waveHeight: 38.50,
+    waveSpeed: 1.65,
+    zoom: 0.9
+  })
+</script>
+    
+    <header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <a href="index.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
           <img src="images/favicon.ico?rand=4951" class="u-logo-image u-logo-image-1" data-image-width="80">
         </a>
@@ -70,16 +91,14 @@
             data-aos-easing="ease-out-cubic"
             data-aos-duration="2000">
             <h5>
-              <a class="nb" href="https://gdz.ru/class-6/matematika/reshebnik-erin-v-k/">Ответы на контрольные и проверочные по математике</a>
+              <a class="nb" href="https://gdz.ru/class-7/algebra/didakticheskie-materiali-merzlyak/">Ответы на контрольные и проверочные по математике</a>
             </h5>
-           <h5><a class="nb" href="https://disk.yandex.ru/d/97uCrj3GH-OEoA" />Ответы на на тест по обществознанию </a></h5>
- <h5><a class="nb" href="https://drive.google.com/file/d/1USbV22DrJuoOvBm0uBaFe62DbYQ43jf2/view?usp=sharing" />Ответы на контрольные и проверочные по биологии</a></h5>
-				<h5><a class="nb" href="https://drive.google.com/file/d/1S6L0ShQMEti40Zr-2Yc819VzYANkMAGa/view?usp=drivesdk" />Ответы на контрольные и проверочные по английскому языку</a></h5>
+        		<h5><a class="nb" href="https://drive.google.com/file/d/1VOD5UPNuYrZMgnLe2mL72bMvznQMZ5TO/view?usp=sharing" />Ответы на контрольные и проверочные по английскому языку</a></h5>
 					<h5><a class="nb" href="https://drive.google.com/file/d/1LBFLILZ2cBkCT1YAVONO0NI8yCKUSPnL/view?usp=drivesdk">Тестовые задачи по математике </a></h6>
 <h5><a href="https://drive.google.com/file/d/1PmMoNs8NcYEQb9nWDxl-hP5_33xm38u3/view?usp=drivesdk" class="nb" >Диктанты по математике</a></h5>
-					 <h5><a class="nb" href="https://drive.google.com/file/d/16uHQKUE5aJ_52nTU1T7nEzXu93MV0rZz/view?usp=sharing" />Методичка по физике</a></h5>
+					 <h5><a class="nb" href="#" />Методичка по физике</a></h5>
 				<h5><a class="nb" href="https://drive.google.com/file/d/1ApWu3NeV25H_MViSgu-adCxQCcDYulDP/view?usp=sharing">Задачник по физике</a></h5>
-					<h5><a class="nb" href="https://drive.google.com/file/d/19Cn-l-LaIpGfdMpDBPD4iGT9EHhG6zeS/view?usp=drivesdk">Учебник по музыке</a></h6>
+					<h5><a class="nb" href="https://drive.google.com/file/d/1Kk4sexrSIDg2O_5qAS6CPX9kNbBjSrPn/view?usp=sharing">Учебник по музыке</a></h6>
           </div>
           </center>
         </div>
