--- a/Расписание.html
+++ b/Расписание.html
@@ -36,7 +36,28 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/85851797" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 </head>
-  <body class="u-body"><header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
+  <body class="u-body fog" id="fog">
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.waves.min.js"></script>
+<script>
+  VANTA.WAVES({
+    el: "#fog",
+    mouseControls: true,
+    touchControls: true,
+    gyroControls: false,
+    minHeight: 200.00,
+    minWidth: 200.00,
+    scale: 1.00,
+    scaleMobile: 1.00,
+    color: 0x583f79,
+    waveHeight: 38.50,
+    waveSpeed: 1.65,
+    zoom: 0.9
+  })
+</script>
+
+    <header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <a href="index.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
           <img src="images/favicon.ico?rand=4951" class="u-logo-image u-logo-image-1" data-image-width="80">
         </a>
@@ -80,7 +101,7 @@
         <div class="nb u-clearfix u-custom-html u-custom-html-2">
           <center>
             <div class="border" data-aos="flip-up">
-            <a href="расп3.jpg" class="nb">
+            <a href="#" class="nb">
               <h4>Расписание уроков</h4>
             </a>
             <a href="звонки.jpg" class="nb">
@@ -99,10 +120,10 @@
               <h4>Предметы и учителя</h4>
             </a>
             
-            <a href="консультации.jpg" class="nb">
+            <a href="#" class="nb">
               <h4>График консультаций</h4>
             </a>
-            <a href="внеурок.jpg" class="nb">
+            <a href="#" class="nb">
               <h4>Расписание внеурочки</h4>
                           <a href="316.jpg" class="nb">
               <h4>План рассадки 316</h4>
