--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -24,7 +24,28 @@
   
 
 </head>
-  <body class="u-body"><header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+  <body class="u-body fog" id="fog">
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.waves.min.js"></script>
+<script>
+  VANTA.WAVES({
+    el: "#fog",
+    mouseControls: true,
+    touchControls: true,
+    gyroControls: false,
+    minHeight: 200.00,
+    minWidth: 200.00,
+    scale: 1.00,
+    scaleMobile: 1.00,
+    color: 0x583f79,
+    waveHeight: 38.50,
+    waveSpeed: 1.65,
+    zoom: 0.9
+  })
+</script>
+    
+    <header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <a href="index.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
           <img src="images/favicon.ico?rand=4951" class="u-logo-image u-logo-image-1" data-image-width="80">
         </a>
@@ -65,15 +86,8 @@
         <div class="u-clearfix u-custom-html u-custom-html-1" >
           <center><h3 class="nb" style="font-size: 22px" >Ближайшие Контрольные </h3>
             <div data-aos="fade-down" class="border">
-<h4>Физика<br>14 февраля </h4>
-<p class="nb">Вопросы: 1.Элементарный электрический заряд<br>
-2.положительные элементарные заряды<br>
-3.отрицательные элементарные заряды<br>
-4.как обозначаются электроны<br>
-5.чему равен эл. заряд<br>
-6.как обозначается заряд<br>
-7.чему равен заряд электрона<br>
-8.Что такое электрическое поле</p>
+<h4><br> </h4>
+
             </div>
         </div>
       </div>
