--- a/dz.html
+++ b/dz.html
@@ -5,10 +5,10 @@
      crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
-        <meta name="keywords" content="ТФТЛ,DZ6A,dz6a,Dz6a,dz6a тфтл,тфтл,дз6а тфтл,дз,Dz,Расписание,Домашние задания.">
-    <meta name="description" content="Dz6a тфтл все дз 6а на сайте и многое другое">
+    <meta name="keywords" content="ТФТЛ,DZ7A,d7a,Dz7a,dz7a тфтл,тфтл,дз6а тфтл,дз,Dz,Расписание,dz6a,Домашние задания.">
+    <meta name="description" content="Dz7a тфтл все дз 7а на сайте">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Dz6a дз</title>
+    <title>Dz7a дз</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="dz.css" media="screen">
  
@@ -20,7 +20,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Dz6anew",
+		"name": "Dz7a",
 		"logo": "images/favicon.ico?rand=4951"
 }</script>
 
