--- a/Расписание.html
+++ b/Расписание.html
@@ -101,10 +101,10 @@
         <div class="nb u-clearfix u-custom-html u-custom-html-2">
           <center>
             <div class="border" data-aos="flip-up">
-            <a href="#" class="nb">
+            <a href="расп3.jpg" class="nb">
               <h4>Расписание уроков</h4>
             </a>
-            <a href="звонки.jpg" class="nb">
+            <a href="time.jpg" class="nb">
               <h4>Расписание звонков</h4>
             </a>
             <a href="обязан.jpg" class="nb">
@@ -113,23 +113,8 @@
             <a href="деж.jpg" class="nb">
               <h4>Расписание дежурств</h4>
             </a>
-            <a href="график.jpg" class="nb">
-              <h4>График захода в лицей</h4>
-            </a>
             <a href="учителя_3118474130252.jpg" class="nb">
               <h4>Предметы и учителя</h4>
-            </a>
-            
-            <a href="#" class="nb">
-              <h4>График консультаций</h4>
-            </a>
-            <a href="#" class="nb">
-              <h4>Расписание внеурочки</h4>
-                          <a href="316.jpg" class="nb">
-              <h4>План рассадки 316</h4>
-            </a>
-            <a href="другие.jpg" class="nb">
-              <h4>План рассадки в других кабинетах</h4>
             </a>
           </div>
           </center>
