--- a/dz.html
+++ b/dz.html
@@ -104,7 +104,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            				    	  <h5> <a href="13 мая.html" class="nb">Дз на 13 мая Обществознание Литература </a></h5>    
+            				    	  <h5> <a href="#" class="nb">. </a></h5>    
 
             			   
         </div>
