--- a/download.html
+++ b/download.html
@@ -523,13 +523,13 @@
         <table width="100%" cellpadding="5" cellspacing="0">
             <tr>
                 <td id="installId"><div style="padding-top: 15px" class="appStat appInstall">
-                        Установок: 16           </div>
+                        Установок: 2           </div>
                 </td>
                 <td id="nameId"><div class="appName">
-                        Dz6a тфтл                    </div>
+                        Dz7a                </div>
                 </td>
                        <td id="installId"><div class="appStat appInstall">
-                        Версия: 4.0              </div>
+                        Версия: 1.0              </div>
                 </td>
 
             </tr>
@@ -537,6 +537,6 @@
             </div>
 
     <div class="aboutAppText">
-         <a href="https://dz6a.netlify.app/Dz6a_4.0.apk">  <div class="mainText">Загрузить</div>
+         <a href="https://dz6a.netlify.app/Dz7a.apk">  <div class="mainText">Загрузить</div>
 
        
