--- a/3 сентября.html
+++ b/3 сентября.html
@@ -28,7 +28,29 @@
 
 
 </head>
-  <body class="u-body"><header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601">
+  <body class="u-body fog" id="fog">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.waves.min.js"></script>
+<script>
+  VANTA.WAVES({
+    el: "#fog",
+    mouseControls: true,
+    touchControls: true,
+    gyroControls: false,
+    minHeight: 200.00,
+    minWidth: 200.00,
+    scale: 1.00,
+    scaleMobile: 1.00,
+    color: 0x583f79,
+    waveHeight: 38.50,
+    waveSpeed: 1.65,
+    zoom: 0.9
+  })
+</script>
+
+
+<header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601">
     <center><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <a href="index.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
           <img src="images/favicon.ico?rand=4951" class="u-logo-image u-logo-image-1" data-image-width="80">
