--- a/3 сентября.html
+++ b/3 сентября.html
@@ -98,7 +98,7 @@
   <h4>Физика</h4>
   <h5>§4, §5 читать</h5><br>
     <h4>Русский</h4>
-  <h5></h5><br>
+  <h5>текст 1. Задание 1(письменно), задание 2(устно)</h5><br>
     
  </div>
         </div>
