--- a/6 сентября.html
+++ b/6 сентября.html
@@ -96,7 +96,7 @@
 
 
   <h4>Физика</h4>
-  <h5>§7 пересказ</h5>
+  <h5>§7 пересказ</h5><br>
   <h4>География</h4>
   <h5>§1 учить термины и переписать в тетрадь 2 слайда. <a href="https://dz6a.netlify.app/Гео1.jpg">слайд 1</a> <a href="https://dz6a.netlify.app/Гео2.jpg">слайд 2</a></h5>
  </div>
