--- a/5 октября.html
+++ b/5 октября.html
@@ -98,7 +98,7 @@
   <h4>Обществознание</h4>
   <h5>&3 В классе и дома 4,8</h5><br>
     <h4>Алгебра</h4>
-  <h5></h5><br>
+  <h5>216-222зел. 222-230все. Правила </h5><br>
   <h4>Геометрия</h4>
   <h5>101 предупреждение китайского императора: ЗАЧЕТ!!!!! 115-130. зеленые. № 131. прочиать стр.40-44 </h5><br>
 
