--- a/8 октября.html
+++ b/8 октября.html
@@ -100,7 +100,7 @@
     <h4>Русский</h4>
   <h5>упр 128</h5><br>
     	<h4>Физика</h4>
-    <h5>дорешать СР-10. № 3 (ВУ); решить № 4(ВУ)</h5>
+    <h5>дорешать СР-10. № 3 (ВУ); решить № 4(ВУ)</h5><br>
 <h4>География</h4>
 <h5>параграф 10, выписать и выучить термины, записать топ 20 крупнейших агломераций мира.</h5>
 
