--- a/12 октября.html
+++ b/12 октября.html
@@ -99,8 +99,8 @@
   <h5>Нидерланды. Читать, устно ответить на вопросы в конце параграфа</h5><br>
     <h4>Алгебра</h4>
   <h5>264-274 зеленые</h5><br>
-  <h4>Литература</h4>
-  <h5>Подготовиться к сочинению</h5>
+  <h4>Литература</h4>  
+  <h5>Подготовиться к сочинению</h5><br>
 <h4>Английский 1гр</h4>
 <h5>W.b p. 12 ex. 1,2</h5>
 
