--- a/26 ноября.html
+++ b/26 ноября.html
@@ -99,7 +99,8 @@
   <h5>параграф 20, термины, выписать, выучить, к/карта стр.10-11 №6,7. Уметь работать с картой.</h5><br>
  <h4>Русский</h4>
         <h5>упр 227 (3 а)</h5>
-          
+          <h4>Физика</h4>
+        <h5>§§ 35; 36; 37 (пересказ)</h5>
 </div>
         </div>
       </div>
