--- a/2 декабря.html
+++ b/2 декабря.html
@@ -102,7 +102,7 @@
           <h4>Русский</h4>
         <h5>упр 231</h5>
   <h4>Биология</h4>
-  <h5>Учебник стр.44-47 читать, закончить общую характеристику типа плоские черви, ?3(стр47) письменно,РТ №4(стр.32). Посмотреть <a href=""https://interneturok.ru/lesson/biology/7-klass/zhivotnye-ploskie-chervi/ploskie-chervi и https://interneturok.ru/lesson/biology/7-klass/zhivotnye-ploskie-chervi/lentochnye-chervi">ссылка</a></h5>
+  <h5>Учебник стр.44-47 читать, закончить общую характеристику типа плоские черви, ?3(стр47) письменно,РТ №4(стр.32). Посмотреть <a href="https://interneturok.ru/lesson/biology/7-klass/zhivotnye-ploskie-chervi/ploskie-chervi и https://interneturok.ru/lesson/biology/7-klass/zhivotnye-ploskie-chervi/lentochnye-chervi">ссылка</a></h5>
 </div>
         </div>
       </div>
