--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
         <div class="u-clearfix u-sheet u-sheet-1">
           <center> <h1 class="u-align-center u-text u-text-body-alt-color u-text-1" data-aos="fade-up-left">Домашние задания 7а</h1>
             <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-aos="fade-up-left" >ТФТЛ</h6>
-        
-     <br><br><br><br>
+        <br><br>
+        <script src="//megatimer.ru/get/f9675e42d19aa0fe887fff29a36dfff3.js"></script>     
+               <br><br>
            <div class="border" data-aos="fade-right">
             <div class="nb u-clearfix u-custom-html u-custom-html-1">
     
