--- a/index.html
+++ b/index.html
@@ -45,22 +45,18 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.fog.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
 <script>
-  VANTA.FOG({
-    el: "#fog",
-    mouseControls: true,
-  touchControls: true,
-  gyroControls: true,
-  minHeight: 1280.00,
-  minWidth: 500.00,
-  highlightColor: 0x829beb,
-  midtoneColor: 0x873429,
-  lowlightColor: 0x1F3BA8,
-  baseColor: 0x583f79,
-  speed: 4.30
-  })
-</script>
+bubbly({
+blur:13,
+colorStart: '#6721AC',
+colorStop: '#7827EB',
+radiusFunc:() => 5 + Math.random() * 15,
+bubbles:100
 
+
+});
+</script>
 
 	  <header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <a href="index.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
@@ -103,7 +99,7 @@
           <center> <h1 class="u-align-center u-text u-text-body-alt-color u-text-1" data-aos="fade-up-left">Домашние задания 7а</h1>
             <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-aos="fade-up-left" >ТФТЛ</h6>
         <br><br>
-        <script src="//megatimer.ru/get/f9675e42d19aa0fe887fff29a36dfff3.js"></script>     
+          
                <br><br>
            <div class="border" data-aos="fade-right">
             <div class="nb u-clearfix u-custom-html u-custom-html-1">
