--- a/dz.html
+++ b/dz.html
@@ -101,6 +101,7 @@ bubbles:100
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
+              <h5> <a href="1 апреля.html" class="nb" >1 апреля</a></h5>   
      	        <h5> <a href="31 марта.html" class="nb" >31 Марта</a></h5>   
              	
             	       
